<resources>
    <string name="app_name">FirebaseChat</string>
    <string name="mensagem_hint">Mensagem</string>
    <string name="email">Email</string>
    <string name="num">Número Contato</string>
    <string name="meuNum">número</string>
    <string name="enviar">Enviar</string>
    <string name="adicionar">Adicionar</string>
    <string name="tituloAdicionarContato">Adicionar Contato</string>
    <string name="hora">12:00</string>
    <string name="nomeConversa">Nome</string>
    <string name="addressDispo">Endereço</string>
    <string name="tituloDeletarContato">Deletar Contato</string>
    <string name="mensagemDeletarContato">Você deseja deletar este contato?</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="inscrever">Inscrever-se</string>
    <string name="bemvindo">Bem-Vindo</string>
    <string name="logo">Logo</string>
    <string name="carregando">Aguarde…</string>
    <string name="numeroDisplay">Nº :</string>
    <string name="onlineDisplay">Online</string>
    <string name="offlineDisplay">Offline</string>
    <string name="imageContent">Conteúdo Imagem</string>
    <string name="avatar">Avatar do Usuário</string>

    <string name="signOut">Desinscrever-se</string>
    <string name="signOutText">Você deseja se desinscrever do app?</string>

    <string name="fc">FC</string>
    <string name="barra">Barra Layout</string>
</resources>