<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/primary_color_dark"
        tools:context=".fragment.SignUpFragment">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="175dp"
            android:layout_height="175dp"
            android:layout_gravity="center"
            android:layout_marginTop="120dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo_dois"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="27dp"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_mono_light_italic"
            android:text="@string/app_name"
            android:textColor="@color/cinza"
            android:textSize="@dimen/tamanhoMensagemEnviar"
            app:layout_constraintBottom_toTopOf="@+id/signIn"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/secondary_color_dark"
            android:drawableLeft="@drawable/ic_google"
            android:text="@string/inscrever"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            tools:ignore="RtlHardcoded" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>