<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.malfaa.firebasechat.viewmodel.ContatosViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contatos_fragment"
        android:background="@color/fundo_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.ContatosFragment">

        <TextView
            android:id="@+id/numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:height="50dp"
            android:gravity="center"
            android:hint="@string/meuNum"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toStartOf="@+id/statusIcone"
            app:layout_constraintStart_toEndOf="@+id/numeroDisp"
            app:layout_constraintTop_toTopOf="parent">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVContatos"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/numero"
            tools:listitem="@layout/contato_item" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/adicaoNovoContato"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/float_dimen"
            android:layout_marginBottom="@dimen/float_dimen"
            android:clickable="true"
            android:focusable="true"
            android:src="@android:drawable/ic_input_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/numeroDisp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/raio_cantos_btn"
            android:text="@string/numeroDisplay"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/numero"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/raio_cantos_btn"
            android:text="@string/onlineDisplay"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/numero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/numero" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/statusIcone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/fundo_color"
            app:layout_constraintBottom_toBottomOf="@+id/status"
            app:layout_constraintEnd_toStartOf="@+id/status"
            app:layout_constraintTop_toTopOf="@+id/status"
            app:srcCompat="@drawable/ic_status_online"
            android:contentDescription="@string/imageContent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>